--- a/main.kv
+++ b/main.kv
@@ -1,4 +1,5 @@
 <InputPage>:
+    name: "main"
 
     
     MDBoxLayout:
@@ -39,3 +40,17 @@
                 font_size: "18sp"
                 size_hint: None, None
                 pos_hint: {"center_x": .5, "center_y": .5}
+                on_release: root.file_manager_open()
+
+
+<OutputPage>:
+    name: "output"
+
+    MDBoxLayout:
+        orientation: "vertical"
+
+        MDLabel:
+            text: "Now Processing"
+            size_hint: 1, 1
+            pos_hint: {"center_x": .5, "center_y": .5}
+            halign: 'center'
